--- a/hugo.yaml
+++ b/hugo.yaml
@@ -16,18 +16,28 @@ menu:
     - name: "Nyitólap"
       url: "/"
       weight: 1
+      params:
+        hidden: true
     - name: "Életrajz"
       url: "/eletrajz/"
       weight: 2
     - name: "Képzőművészet"
       url: "/kepzomuveszet/"
       weight: 3
+      params:
+        last: true
     - name: "Fotók"
       url: "/fotok/"
-      weight: 0
+      weight: 4
+      params:
+        hidden: true
     - name: "Ismeretterjesztés"
       url: "/ismeretterjesztes/"
-      weight: 0
+      weight: 5
+      params:
+        hidden: true
     - name: "Család"
       url: "/csalad/"
-      weight: 0
+      weight: 6
+      params:
+        hidden: true
